# CppExceptions

./: .gitignore  CMakeLists.txt
cmake/: CMakeDefine.h.in
cmakeInclude/: Config.h.in  Name.h.in  Version.h.in
include/: CMakeDefine.h  Config.h  Name.h  Version.h
include/analysis/: AnalysisProgram.h
include/error/: Exception.h  MsvcException.h  Types.h
include/logger/: ConsoleLogger.h  FileLogger.h  ILogger.h  IThreadedLogger.h
include/main/: MainProgram.h  WorkMode.h
include/main/exception/: CppExceptionThread.h  SehExceptionThread.h
include/parser/: NamedArgumentParser.h  ParsedArgument.h
include/program/: Program.h
include/utils/: DllManager.h  ExitCode.h  FileSystem.h  Program.h  SemaphoredQueue.hpp  SharedMemory.hpp  Thread.h
include/utils/container/: SemaphoredQueue.hpp
include/utils/exception/: ExceptionManager.h  MsvcException.h  RequiredExceptionInfo.h
include/utils/exception/ipc/: ExceptionPointers.h  ExceptionRecord.h  IpcExceptionManager.h  LimitedExceptionPointer.h
include/utils/exception/minidump/: MiniDumpInfo.h  MiniDumpTools.h
include/utils/exception/stackwalk/: ExtendedSymbolInfo.h  StackFrameEntry.h  StackWalkManager.h
include/utils/files/: FileTools.h
include/utils/filesystem/: FileTools.h
include/utils/ipc/: SharedMemory.hpp
include/utils/libraries/: DllManager.h
include/utils/logging/: BasicLogger.h  ConsoleLogger.h  FileLogger.h  ILogger.h  IThreadedLogger.h  LogEntry.h  LogLevel.h  LogMsg.h  LogTypes.h  LoggerHolder.h
include/utils/parser/: NamedArgumentParser.h  ParsedArgument.h
include/utils/parser/argument/: ArgumentManager.h  ArgumentTag.h  ArgumentType.h  ArgumentTypeHolder.h  ArgumentValue.hpp  IntArgumentValue.h  NamedArgumentParser.h  RequiredArgument.h  SoloArgumentValue.h  StringArgumentValue.h
include/utils/text/: TextTools.h
include/utils/thread/: IQueueThread.hpp  ISafeThread.h  IThread.h  ThreadHolder.h
src/: CppExceptions.cpp  CppExceptionsAnalysis.cpp  Version.cpp  main.cpp
src/analysis/: AnalysisProgram.cpp
src/error/: Exception.cpp  MsvcException.cpp
src/logger/: ConsoleLogger.cpp  FileLogger.cpp  ILogger.cpp  IThreadedLogger.cpp
src/main/: MainProgram.cpp  WorkMode.cpp
src/main/exception/: CppExceptionThread.cpp  SehExceptionThread.cpp
src/parser/: NamedArgumentParser.cpp  ParsedArgument.cpp
src/program/: Program.cpp
src/utils/: DllManager.cpp  FileSystem.cpp  Program.cpp  Thread.cpp
src/utils/exception/: ExceptionManager.cpp  MsvcException.cpp  RequiredExceptionInfo.cpp
src/utils/exception/ipc/: ExceptionPointers.cpp  ExceptionRecord.cpp  IpcExceptionManager.cpp
src/utils/exception/minidump/: MiniDumpInfo.cpp  MiniDumpTools.cpp
src/utils/exception/stackwalk/: StackWalkManager.cpp
src/utils/files/: FileTools.cpp
src/utils/filesystem/: FileTools.cpp
src/utils/libraries/: DllManager.cpp
src/utils/logging/: BasicLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  ILogger.cpp  IThreadedLogger.cpp  LogEntry.cpp  LogLevel.cpp  LogTypes.cpp  LoggerHolder.cpp
src/utils/parser/: NamedArgumentParser.cpp  ParsedArgument.cpp
src/utils/parser/argument/: ArgumentManager.cpp  ArgumentTag.cpp  ArgumentTypeHolder.cpp  IntArgumentValue.cpp  NamedArgumentParser.cpp  SoloArgumentValue.cpp  StringArgumentValue.cpp
src/utils/text/: TextTools.cpp
src/utils/thread/: ISafeThread.cpp  IThread.cpp  ThreadHolder.cpp
